tests/NormalTests/paczka1/small_fuzzy/22658123.err
Error in line 1: yR1J7iJ63O A68 45,4
Error in line 14: ik8m3DG0g A68 52,9
